--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "glob": "^7.1.2",
     "md5": "^2.2.1",
+    "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "nodemon": "^1.17.2"
   }
