--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "md5": "^2.2.1",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
-    "nodemon": "^1.17.2"
+    "nodemailer": "^4.6.4",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "nodemon": "^1.17.2",
+    "request": "^2.85.0",
+    "twilio": "^3.14.0"
   }
 }
